# jl

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  plan.md
.github/workflows/: release.yml
HomebrewFormula/: jl.rb
docs/plans/: 2026-02-19-jl-json-log-pretty-printer.md  2026-02-19-logger-formatting-timestamps-compact-default-flush.md  2026-02-20-add-shell-completions.md
docs/plans/completed/: 2026-02-19-jl-json-log-pretty-printer.md  2026-02-19-logger-formatting-timestamps-compact-default-flush.md  2026-02-20-add-shell-completions.md
src/: cli.rs  color.rs  error.rs  format.rs  input.rs  level.rs  lib.rs  main.rs  output.rs  parse.rs  pipeline.rs  record.rs  schema.rs  timestamp.rs
tests/: cli_tests.rs
