[package]
name = "jl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
owo-colors = "4.2"
is-terminal = "0.4"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.15"
